relatorios/202120064/T1/cppcheck.txt
t1-giovanni.cpp:14:11: style: The scope of the variable 'somaDistancias' can be reduced. [variableScope]
    float somaDistancias, resultado;
          ^
t1-giovanni.cpp:21:9: error: Uninitialized variable: resultado [uninitvar]
        resultado += somaDistancias;
        ^
t1-giovanni.cpp:17:26: error: Uninitialized variable: x [uninitvar]
    while(std::cin >> p2.x >> p2.y){
                         ^
